# AutoFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  errors.py  limiter.py  main.py  openapi.py  runtime.py  websocket_manager.py
app/agents/: faq_agent.py  handoff_agent.py  lead_agent.py  orchestrator.py  support_agent.py
app/db/: database.py  models.py
app/memory/: redis_memory.py  thread_memory.py
app/middleware/: request_id.py
app/models/: schemas.py  state.py
app/routers/: auth_deps.py  runs.py  status.py  webhook.py  webhook_helpers.py
app/services/: graph_execution.py
app/tools/: crm_tool.py  email_tool.py  knowledge_tool.py
app/utils/: ollama_client.py  state_json.py
docs/: PRODUCTION_CHECKLIST.md  UPWORK_PORTFOLIO.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  home-dashboard.tsx  layout.tsx  page.tsx  providers.tsx
frontend/components/dashboard/: AppShell.tsx  FormControls.tsx  LiveRunsPanel.tsx  MetricsSidebar.tsx  OverviewPanel.tsx  RunHistoryPanel.tsx  SubmitInquiryPanel.tsx  constants.ts
frontend/hooks/: useLiveRun.ts  useSidebarData.ts
frontend/lib/: api.ts  demoPayload.ts  http.ts  portfolioCapture.ts  siteConfig.ts  types.ts
frontend/scripts/: capture-upwork-dashboard.mjs
scripts/: seed_portfolio_screenshot.py  simulate_requests.py
tests/: conftest.py  test_orchestrator.py  test_production_auth.py  test_state_json.py  test_webhook.py
(+2 files in other folders)
