[project]
name = "autoflow"
version = "1.0.0"
description = "Multi-agent business process automation (FastAPI + LangGraph + Ollama)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
